--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
-    "nats": "^2.0.0"
+    "nats": "^2.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "typescript": "^4.0.0",
+    "nodemon": "^2.0.0",
     "ts-node": "^10.0.0",
-    "nodemon": "^2.0.0"
+    "typescript": "^4.0.0"
   },
   "repository": {
     "type": "git",
